# AnimeEffects

./: CMakeLists.txt
data/: Suggested changes.txt
data/locale/: translation_es.ts  translation_ja.ts
src/: AnimeEffects.pro  CMakeLists.txt  Makefile
src/cmnd/: CMakeLists.txt
src/core/: CMakeLists.txt
src/ctrl/: BoneEditor.cpp  CMakeLists.txt  FFDEditor.cpp  MeshEditor.cpp  PoseEditor.cpp  SRTEditor.cpp  TimeLineEditor.cpp  TimeLineUtil.cpp
src/ctrl/bone/: CMakeLists.txt  bone_BindNodesMode.cpp  bone_CreateMode.cpp  bone_DeleteMode.cpp  bone_MoveJointMode.cpp
src/ctrl/ffd/: CMakeLists.txt  ffd_DragMode.cpp
src/ctrl/mesh/: CMakeLists.txt  mesh_CreateMode.cpp  mesh_DeleteMode.cpp
src/ctrl/pose/: CMakeLists.txt  pose_DrawBoneMode.cpp  pose_ErasePoseMode.cpp  pose_TransBoneMode.cpp
src/ctrl/srt/: CMakeLists.txt  srt_CentroidMode.cpp  srt_MoveMode.cpp
src/ctrl/time/: CMakeLIsts.txt
src/data/: Desired Changes.txt
src/data/locale/: translation_ja.qm
src/data/locale/Old TS/: translation_ja - Copy.ts  translation_ja.ts.new  translation_ja.ts.old
src/gl/: CMakeLists.txt
src/gui/: ExportDialog.cpp  GeneralSettingDialog.cpp  KeyCommandMap.cpp  MainDisplayWidget.cpp  MainMenuBar.cpp  MainWindow.cpp  MouseSettingDialog.cpp  NewProjectDialog.cpp  ObjectTreeWidget.cpp  PlayBackWidget.cpp  ResourceTreeWidget.cpp  TimeLineWidget.cpp  TimeLineWidget.h  ToolWidget.cpp
src/gui/prop/: prop_ConstantPanel.cpp  prop_CurrentKeyPanel.cpp  prop_DefaultKeyPanel.cpp
src/gui/res/: res_ResourceUpdater.cpp
src/gui/tool/: tool_BonePanel.cpp  tool_FFDPanel.cpp  tool_MeshPanel.cpp  tool_ModePanel.cpp  tool_PosePanel.cpp  tool_SRTPanel.cpp
src/util/: Makefile  TextUtil.cpp  object_script.libutil
src/util/.moc/: moc_EasingName.cpp
