set(LIB ${PROJECT_NAME}_core)
set(SRC
AbstractCursor.cpp
Bone2.cpp
BoneExpans.cpp
BoneInfluenceMap.cpp
BoneKey.cpp
BoneKeyUpdater.cpp
BoneShape.cpp
CameraInfo.cpp
ClippingFrame.cpp
DepthKey.cpp
Deserializer.cpp
DestinationTexturizer.cpp
FFDKey.cpp
FFDKeyUpdater.cpp
FolderNode.cpp
GridMesh.cpp
HeightMap.cpp
ImageKey.cpp
ImageKeyUpdater.cpp
LayerMesh.cpp
LayerNode.cpp
MeshKey.cpp
MeshKeyUtil.cpp
MeshTransformer.cpp
MeshTransformerResource.cpp
MoveKey.cpp
ObjectNodeUtil.cpp
ObjectTree.cpp
ObjectTreeEvent.cpp
ObjectTreeNotifier.cpp
OpaKey.cpp
PoseKey.cpp
PosePalette.cpp
Project.cpp
ProjectEvent.cpp
ResourceEvent.cpp
ResourceHolder.cpp
ResourceUpdatingWorkspace.cpp
RotateKey.cpp
ScaleKey.cpp
Serializer.cpp
ShaderHolder.cpp
SRTExpans.cpp
TimeCacheAccessor.cpp
TimeCacheLock.cpp
TimeFormat.cpp
TimeKey.cpp
TimeKeyBlender.cpp
TimeKeyExpans.cpp
TimeKeyGatherer.cpp
TimeLine.cpp
TimeLineEvent.cpp
)
add_library(${LIB} ${SRC})